[package]
name = "ha-openai"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "ha_ai"

[[bin]]
path = "src/bin/websocket.rs"
name = "websocket"

[[bin]]
path = "src/bin/empty.rs"
name = "empty"

[dependencies]




reqwest = { version = "0.11.23", features = ["json", "native-tls-vendored"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tokio-async-drop = "0.1.0"
async-openai = "0.18.1"
serde_json = "1.0.113"
async-trait = "0.1.77"
lazy_static = "1.4.0"
env_logger = "0.11.1"
handlebars = "5.1.1"
futures = "0.3.30"
anyhow = "1.0.79"
chrono = "0.4.33"
serde = "1.0.196"
log = "0.4.20"
todo = "0.3.0"
glob = "0.3.1"
url = "2.5.0"
ctrlc = "3.4.2"


